--- a/networklibrary/build.gradle
+++ b/networklibrary/build.gradle
@@ -39,5 +39,6 @@ dependencies {
     api 'io.reactivex.rxjava2:rxandroid:2.0.2'
 //    api 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     api 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    api  project(path: ':configlibrary')
 
 }
